--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Ange1D/express_basic/issues"
   },
-  "homepage": "https://github.com/Ange1D/express_basic#readme"
+  "homepage": "https://github.com/Ange1D/express_basic#readme",
+  "dependencies": {
+    "express": "^4.17.3"
+  }
 }
